--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/barretlee/online-markdown.git"
+    "url": "https://github.com/i5ting/wechat-online-markdown.git"
   },
   "files": [
     "docs",
@@ -23,12 +23,12 @@
     "markdown",
     "format"
   ],
-  "author": "Barret Lee <barret.china@gmail.com>",
+  "author": "i5ting <i5ting@126.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/barretlee/online-markdown/issues"
+    "url": "https://github.com/i5ting/wechat-online-markdown/issues"
   },
-  "homepage": "https://github.com/barretlee/online-markdown",
+  "homepage": "https://github.com/i5ting/wechat-online-markdown",
   "dependencies": {
     "finalhandler": "^1.1.0",
     "opn": "^5.2.0",
