--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/i5ting/wechat-online-markdown.git"
+    "url": "https://github.com/i5ting/wom.git"
   },
   "files": [
     "docs",
@@ -27,9 +27,9 @@
   "author": "i5ting <i5ting@126.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/i5ting/wechat-online-markdown/issues"
+    "url": "https://github.com/i5ting/wom/issues"
   },
-  "homepage": "https://github.com/i5ting/wechat-online-markdown",
+  "homepage": "https://github.com/i5ting/wom",
   "dependencies": {
     "finalhandler": "^1.1.0",
     "opn": "^5.2.0",
